tests/ui/tool-attributes/duplicate-canonical-symbols.stderr
error: duplicate canonical symbol in crate `duplicate_canonical_symbols`: `foo`
  --> $DIR/duplicate-canonical-symbols.rs:12:5
   |
LL |     fn foo2();
   |     ^^^^^^^^^^
   |
note: the canonical symbol is first defined here
  --> $DIR/duplicate-canonical-symbols.rs:9:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error: duplicate canonical symbol in crate `duplicate_canonical_symbols`: `foo`
  --> $DIR/duplicate-canonical-symbols.rs:12:5
   |
LL |     fn foo2();
   |     ^^^^^^^^^^
   |
   = note: the canonical symbol is first defined in crate `symbols`

error: aborting due to 2 previous errors

